--- a/src/styles/components/student-preview.scss
+++ b/src/styles/components/student-preview.scss
@@ -57,7 +57,6 @@
     padding: 1.25rem;
     display: flex;
     align-items: center;
-    gap: 1rem;
     border-bottom: 1px solid var(--divider-color);
     flex-wrap: wrap;
     justify-content: space-between;
@@ -94,7 +93,7 @@
         
         .student-name {
           margin: 0 0 0.25rem;
-          font-size: 1.125rem;
+          font-size: 1rem;
           font-weight: 600;
           color: var(--text-primary);
           white-space: nowrap;
