--- a/src/styles/pages/rehearsal-details.scss
+++ b/src/styles/pages/rehearsal-details.scss
@@ -19,7 +19,7 @@
           position: absolute;
           right: 1.5rem;
           top: 1.5rem;
-          background: none;
+          background-color: rgba(0, 0, 0, 0.3);
           border: none;
           color: var(--text-secondary);
           cursor: pointer;
